# Tards

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  COMPLEX_CARDS_INDEX.md  Gamestart.py  PYGAME_MIGRATION_PLAN.md  README.md  TARDS_GAME_REFERENCE.md  TARDS卡牌效果编写指南.docx  Tards规则书1.0.docx  _build_tool_page.py  _check_page_issues.py  _check_unit_usage.py  _debug_fange.py  _debug_fange2.py  _debug_fange3.py  _debug_jiandao.py  _extract_keywords.py  _next_session_prompt.md  _rename_unit.py  _session_context.md  agent_team_config.json.example  demo.py  demo_deckbuild.py  effect_utils_browser.html  feedback_server.py  generate_architecture_pdf.py  generate_guide_doc.py  gui_client.py  index.html  keywords_index.json  keywords_index.txt  pyproject.toml  rules_text.txt  tards.py  test_combat_cards.py  test_compat.md  test_delay_effects.py  test_develop.py  (+13 more)
TARDS(demo)/: Gamestart.py  Tards.spec  local_duel.py  make_icon.py  requirements.txt  start.bat
agent_team/: __init__.py  cli.py  config.py
card_pools/: __init__.py  blood.py  blood_effects.py  discrete.py  discrete_effects.py  effect_decorator.py  effect_utils.py  tag_overrides.py  underworld.py  underworld_effects.py
config/: feedback_config.json  keywords_index.json
decks/: test_save.json  兀鹫测试.json  冥刻测试1.json  复杂离散测试.json  新卡组.json  最厚仪式.json  漂浮物测试.json  离散测试.json  空中优势.json  阴谋测试.json
docs/: AGENTS.md  ARCHITECTURE.md  COMPLEX_CARDS_INDEX.md  PYGAME_MIGRATION_PLAN.md  TARDS_GAME_REFERENCE.md  Tards规则书1.0.docx  handoff_tards_2026-06-19.md  rules_text.txt  冥刻卡包.txt  离散卡包.docx  离散卡包.txt  血契卡包.docx  (+1 more)
(+209 files in other folders)
